# mil_team-initial-processing-ids

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: high-level-spec.md  implementation-plan.md  task_implementation.md  test-asignment-task.md  todo.md
src/: __init__.py
src/app/: main.py
src/app/api/: errors.py  routes.py  schemas.py
src/app/core/: __init__.py  config.py  exceptions.py  logging.py
src/app/extraction/: __init__.py  bank_card_extractor.py  base_extractor.py  dispatcher.py  drivers_license_extractor.py  (+3 more)
tests/e2e/: test_document_matrix.py
tests/integration/: test_exception_handlers.py  test_health.py  test_process_document.py  test_request_id.py
tests/unit/: test_alignment_diagnostics.py  test_api_errors.py  test_api_schemas.py  test_artifacts.py  test_bank_card_extractor.py  test_confidence.py  test_config.py  test_consistency_checks.py  test_denoise_contrast_normalization.py  test_document_boundary_detection.py  test_document_preprocessor.py  test_drivers_license_extractor.py  test_exceptions.py  test_extraction_base.py  test_extraction_dispatcher.py  test_extraction_rules_common.py  test_field_validators.py  test_id_card_extractor.py  test_image_io.py  test_logging.py  test_normalizers.py  test_ocr_detector_adapter.py  test_ocr_detector_models.py  test_ocr_recognizer_adapter.py  test_ocr_recognizer_models.py  test_perspective_correction.py  test_pipeline_device_selection.py  test_pipeline_models.py  test_pipeline_processing.py  test_rotation_normalization.py  test_smoke.py  test_telemetry_metrics.py
(+20 files in other folders)
